Spacing Fixes

--- a/mpdx_marketing/assets/scss/styles.scss
+++ b/mpdx_marketing/assets/scss/styles.scss
@@ -19,24 +19,28 @@
 
 
 
-$white:     #ffffff;
-$black:     #000000;
-$silver:    #f0f0f0;
-$silver2:   #e7e7e7;
-$cru-gold:  #f9b625;
-$gray:      #626262;
+$white:             #ffffff;
+$black:             #000000;
+$silver:            #f0f0f0;
+$silver2:           #e7e7e7;
+$cru-gold:          #f9b625;
+$gray:              #626262;
 
-$mpdx1:     #f9b625;
-$mpdx2:     #3eb1c8;
-$mpdx3:     #007398;
+$mpdx1:             #f9b625;
+$mpdx2:             #3eb1c8;
+$mpdx3:             #007398;
+
+$font-size:         16px;
+$font-family:       'source sans';
+$gutter:            30px;
 
 html {background-color: $white;}
 
 .product-pages {
   section {background-color: $white;}
   h2 {
-    font-size: 26px;
-    line-height: 30px;
+    font-size: $font-size*1.75;
+    line-height: 1.35em;
   }
 
   .btn {
@@ -62,7 +66,7 @@ html {background-color: $white;}
   h2 + p {margin-top: 28px}
 
   p {
-    line-height: 18px;
+    line-height: 1.5em;
     + .btn-primary {margin-top: 26px;}
   }
 
@@ -115,58 +119,33 @@ html {background-color: $white;}
     }
   }
 
-  .sec3 {
-    background-image: url(assets/img/dashboards.png);
-    background-position: right bottom;
-    background-repeat: no-repeat;
-    background-size: auto 90%;
-    padding-top: 66px;
-    padding-bottom: 66px;
-    p {
-      color: $gray;
-    }
-  }
-
-  .sec4 {
-    background-image: url(assets/img/connect_mpdx.jpg);
-    background-position: 16% -10%;
-    background-repeat: no-repeat;
-    background-size: auto 115%;
-    padding-top: 74px;
-    padding-bottom: 196px;
-    p {color: $gray;}
-  }
-
+  .sec3,
+  .sec4,
   .sec5 {
-    background-image: url(assets/img/contacts_hands_mpdx.png);
-    background-position: 86% bottom;
-    background-repeat: no-repeat;
-    background-size: auto 90%;
-    padding-top: 72px;
-    padding-bottom: 176px;
+    padding-top: $gutter*2;
     p {color: $gray;}
   }
 
   .testimonials {
     background-color: $cru-gold;
-    padding-top: 62px;
-    padding-bottom: 62px;
+    padding-top: $gutter*2;
+    padding-bottom: $gutter*2;
     color: $white;
     p {
-      line-height: 23px;
-      font-size: 20px;
+      line-height: 1.75em;
+      font-size: $font-size*1.15;
       &:last-of-type {margin-bottom: 0;}
     }
   }
 
   .sec7 {
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: $gutter*2;
+    padding-bottom: $gutter*2;
     .question, .answer {
-      padding-top: 32px;
-      padding-left: 15px;
-      padding-right: 15px;
-      padding-bottom: 32px;
+      padding-top: $gutter;
+      padding-left: $gutter/2;
+      padding-right: $gutter/2;
+      padding-bottom: $gutter;
     }
     .question {
       background-color: $silver;
@@ -350,7 +329,7 @@ html {background-color: $white;}
       /* margin-bottom: 70px; */
     }
     p {
-      line-height: 20px;
+      line-height: 1.25em;
       margin-bottom: 18px;
       letter-spacing: .57px;
       &:last-child {margin-bottom: 0;}
